# hellbox-afdko

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
src/hellbox/jobs/afdko/: __init__.py  make_otf.py  otf2ttf.py  ttf_componentizer.py
tests/: conftest.py  test_make_otf.py  test_otf2ttf.py  test_ttf_componentizer.py
