[project]
name = "hellbox-afdko"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hellbox",
    "afdko>=4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
exclude = ["hellbox", "hellbox.jobs"]

[dependency-groups]
dev = ["pytest", "fonttools"]

[tool.uv.sources]
hellbox = { git = "https://github.com/hellboxpy/hellbox.git" }
